-fix fucking scrollbars

--- a/src/css/scrollbar.css
+++ b/src/css/scrollbar.css
@@ -2,19 +2,18 @@
     .scrollbarMessages {
        margin: 0 5px 0 5px;
     }
-
 }
-
 .scrollbar {
    /* margin-left: 30px;
     float: left;
     height: 300px;
     width: 65px;
     background: #F5F5F5;*/
-    overflow-y: scroll;
+    overflow-y: auto;
+    height: 100%;
    /* min-height: 100%;*/
-    height: -webkit-fill-available;
-    max-height: -webkit-fill-available;
+/*    height: -webkit-fill-available;
+    max-height: -webkit-fill-available;*/
   /*  margin-bottom: 25px;*/
 }
 .scrollbarMessages {
@@ -23,10 +22,11 @@
      height: 300px;
      width: 65px;
      background: #F5F5F5;*/
-    overflow-y: scroll;
+    overflow-y: auto;
+    height: 100%;
     /* min-height: 100%;*/
-    height: -webkit-fill-available;
-    max-height: -webkit-fill-available;
+ /*   height: -webkit-fill-available;
+    max-height: -webkit-fill-available;*/
     /*  margin-bottom: 25px;*/
 }
 #style-3::-webkit-scrollbar-track {
@@ -34,11 +34,11 @@
   /*  background-color: #F5F5F5;*/
 }
 #style-3::-webkit-scrollbar {
-    width: 8px;
+    width: 5px;
   /*  background-color: #F5F5F5;*/
 }
 #style-3::-webkit-scrollbar-thumb {
-    /*  border-radius: 5px;*/
+     border-radius: 100px;
   background-color: rgba(0, 0, 0, 0.12);
 }
 
@@ -47,10 +47,10 @@
     /*  background-color: #F5F5F5;*/
 }
 #style-2::-webkit-scrollbar {
-    width: 8px;
+    width: 5px;
     /*  background-color: #F5F5F5;*/
 }
 #style-2::-webkit-scrollbar-thumb {
-    /*  border-radius: 5px;*/
+    border-radius: 100px;
     background-color: rgba(130, 133, 140, 0.46);
 }
